--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.2.0",
     "embla-carousel-autoplay": "^8.2.0",
-    "embla-carousel-react": "^8.2.0",
+    "embla-carousel-react": "^8.2.1",
     "i18next": "^23.14.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.436.0",
@@ -26,10 +27,14 @@
     "next": "14.2.7",
     "next-i18n-router": "^5.5.1",
     "next-i18next": "^15.3.1",
+    "node-appwrite": "^14.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "resend": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
