Contact Initial Implementation

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 I18NEXUS_API_KEY="O8slgQzePNpXO14mOqM8Hg"
+RESEND_API_KEY=re_YpZDCFLf_5KCYKD426AEabeBm5FqhfNgc
 NEXT_PUBLIC_ENDPOINT=https://cloud.appwrite.io/v1
 NEXT_PUBLIC_PROJECT_ID=66d859d500100b48fa34
 NEXT_PUBLIC_DATABASE_ID=66d85a090020656bd313
