--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-i18n-router": "^5.5.1",
     "next-i18next": "^15.3.1",
     "node-appwrite": "^14.0.0",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
